[gd_scene load_steps=11 format=3 uid="uid://cyytys2xts5tu"]

[ext_resource type="Script" path="res://assets/ui/simple_panel_message/simple_panel_message.gd" id="1_qy11g"]
[ext_resource type="FontFile" uid="uid://j5lmvns8gupg" path="res://assets/fonts/ttf/Poppins-Bold.ttf" id="2_gjvw6"]
[ext_resource type="FontFile" uid="uid://cs126ybekixv6" path="res://assets/fonts/ttf/Poppins-Medium.ttf" id="3_kfm3u"]
[ext_resource type="FontFile" uid="uid://bqlmj2xwvkrst" path="res://assets/fonts/ttf/Poppins-SemiBold.ttf" id="4_jf5n7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tbrwf"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 45
corner_radius_top_right = 45
corner_radius_bottom_right = 45
corner_radius_bottom_left = 45
shadow_color = Color(0.470588, 0.470588, 0.470588, 0.501961)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7h1a7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n4ie2"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0.470588, 0.470588, 0.470588, 0.501961)
shadow_size = 4
shadow_offset = Vector2(0, 2)

[sub_resource type="Animation" id="Animation_xtmis"]
resource_name = "show_panel"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelLogout:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(75, 1300), Vector2(75, 418.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_ivdvv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PanelLogout:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(75, 1300)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tnrmj"]
_data = {
"RESET": SubResource("Animation_ivdvv"),
"show_panel": SubResource("Animation_xtmis")
}

[node name="simple_panel_message" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_qy11g")

[node name="ColorRect" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = -1
anchor_top = -0.34082
anchor_right = 1.0
anchor_bottom = 1.25977
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.537255)
metadata/_edit_use_anchors_ = true

[node name="PanelLogout" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 75.0
offset_top = 1300.0
offset_right = 525.0
offset_bottom = 1487.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="PanelLogout"]
custom_minimum_size = Vector2(375, 80)
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_tbrwf")

[node name="VBoxContainer" type="VBoxContainer" parent="PanelLogout"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelLogout/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="PanelLogout/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer2" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelLogout/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="title" type="Label" parent="PanelLogout/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_gjvw6")
theme_override_font_sizes/font_size = 18
text = "..."
horizontal_alignment = 1

[node name="message" type="Label" parent="PanelLogout/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(0.380392, 0.380392, 0.380392, 1)
theme_override_fonts/font = ExtResource("3_kfm3u")
theme_override_font_sizes/font_size = 16
text = "..."
horizontal_alignment = 1
autowrap_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="MarginContainer3" type="MarginContainer" parent="PanelLogout/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelLogout/VBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="close" type="Button" parent="PanelLogout/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/focus = SubResource("StyleBoxEmpty_7h1a7")
flat = true

[node name="Panel" type="Panel" parent="PanelLogout/VBoxContainer/HBoxContainer/close"]
custom_minimum_size = Vector2(375, 80)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_n4ie2")

[node name="CenterContainer" type="CenterContainer" parent="PanelLogout/VBoxContainer/HBoxContainer/close"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelLogout/VBoxContainer/HBoxContainer/close/CenterContainer"]
layout_mode = 2
alignment = 1

[node name="MarginContainer4" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer/close/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
mouse_filter = 2

[node name="Label" type="Label" parent="PanelLogout/VBoxContainer/HBoxContainer/close/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("4_jf5n7")
theme_override_font_sizes/font_size = 16
text = "Ok"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer5" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer/close/CenterContainer/HBoxContainer"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelLogout/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tnrmj")
}

[connection signal="gui_input" from="ColorRect" to="." method="_on_color_rect_gui_input"]
[connection signal="pressed" from="PanelLogout/VBoxContainer/HBoxContainer/close" to="." method="_on_close_pressed"]
